@@ -27,6 +27,8 @@ x design redundancy
     x design code; who locks what?
       x disable concurrency during compilation? -- no, not required
 
+x enable approx matching for cursors (see Sevencat's email)
+
 o implement basic concurrency
     x ./configure: add dependency to boost
     x abstract boost stuff using typedefs:
@@ -45,35 +47,32 @@ o implement basic concurrency
             x use boost tls
             x this needs a test
             x check for memory leaks
+
+    o rewrite monster testsuite
+        o every database will run in its own thread
+        o if --num-threads > 1: only create additional hamsterdb threads;
+            bdb will always run in 1 thread
+        o engine: split create/open/close in 
+            x create_env/create_db, 
+            x open_env/open_db, 
+            o close_env/close_db
+        o create_env: only execute if thread-id == 1; all others wait till
+            thread 1 completed, then run
+        o open_env: only execute if thread-id == 1; all others wait till
+            thread 1 completed, then run
+        o close_env: only execute if thread-id == 1; only execute if all
+            other threads are done closing their db
+        o engine: has a counter which is increased by the database after
+            every operation; will then compare the results of al threads.
+            then reset the counter and signal all threads that they can
+            continue
     o check with valgrind
     o check with helgrind
     o check with ThreadSanitizer
 
-o implement a full test suite (including gathering of performance metrics etc)
-    o refactor monster test and include multi-threading
-        x single point for collecting metrics
-        x also collect file sizes
-        x --profile should be enabled by default; to disable: --quiet
-        x collect performance information based on times(2), not duration
-            http://www.delorie.com/gnu/docs/glibc/libc_430.html
-            -- no, does not work! times are just too short
-        x can run ham2 vs bdb or alone, default is ham2 vs bdb
-            x single backend: skip fullcheck
-        x needs new option --num-threads
-        o threads run same test in parallel, in different databases
-            x parser: read whole file into vector<string>
-            x main: if num-threads > 1: create multiple threads, then 
-                wait for them
-            o engine: split create/open/close in 
-                x create_env/create_db, 
-                x open_env/open_db, 
-                o close_env/close_db
-            o in the _env functions: only execute if id==1; otherwise wait
-                till thread 1 finished (make sure that synchronization is
-                not profiled)
-
-    o has a wrapper script (http://search.cpan.org/~garu/App-Rad-1.04/)
-        that calls and manages the file, gathers the metrics, generates
+    o create a wrapper script for the tests 
+        (based on http://search.cpan.org/~garu/App-Rad-1.04/)
+        that calls and manages the files, gathers the metrics, generates
         tests, create graphs, builds and links the binaries etc
         o needs a config file which describes input/output paths etc
         o monster.pl run-suite 1
@@ -104,7 +103,11 @@ o implement a full test suite (including gathering of performance metrics etc)
             copy the file to a reserved directory
         - read from file (this is the same as we have now)
 
-o enable approx matching for cursors (see Sevencat's email)
+o improve valgrind tests of the unittests 
+    o collect all valgrind suppressions
+    o create a new target in the makefile which uses the suppressions
+    o release.sh: use this target, check that there are no un-suppressed
+        errors (or leaks)
 
 o also remove locking from C# and Java APIs
 
